图表用webapi 有验证

--- a/ChartsWebApi/appsettings.json
+++ b/ChartsWebApi/appsettings.json
@@ -11,5 +11,15 @@
         "Default": "Warning"
       }
     }
+  },
+  "JwtSettings": {
+    "Issuer": "http://localhost:2794/",
+    "Audience": "http://localhost:2794/",
+    "SecretKey": "jwt-key-openinfo.com.cn"
+  },
+  "Cors": {
+    "Origins": {
+      "VueChartTest": "http://localhost:8080"
+    }
   }
 }
