添加后台数据支持DLL

--- a/ChartsWebApi/ChartsWebApi.csproj
+++ b/ChartsWebApi/ChartsWebApi.csproj
@@ -23,7 +23,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GetPDMObject\GetPDMObject.csproj" />
     <ProjectReference Include="..\Repository\Repository.csproj" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties appsettings_1json__JSONSchema="" /></VisualStudio></ProjectExtensions>
 
 </Project>
