动态表单获取； 新增、修改、删除数据；

--- a/GetPDMObject/GetPDMObject.csproj
+++ b/GetPDMObject/GetPDMObject.csproj
@@ -50,6 +50,7 @@
     <Compile Include="PDMUtils.cs" />
     <Compile Include="XmlGet.cs" />
     <Compile Include="XmlResult.cs" />
+    <Compile Include="XmlSet.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="OIClass.dll">
