添加了异常处理模块；

--- a/ChartsWebApi/appsettings.json
+++ b/ChartsWebApi/appsettings.json
@@ -19,7 +19,7 @@
   },
   "Cors": {
     "Origins": {
-      "VueChartTest": "http://localhost:8080"
+      "Guowenyan": "http://localhost:8080"
     }
   }
 }
