--- a/GetPDMObject/GetPDMObject.csproj
+++ b/GetPDMObject/GetPDMObject.csproj
@@ -49,7 +49,8 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PDMUtils.cs" />
     <Compile Include="XmlGet.cs" />
-    <Compile Include="XmlResult.cs" />
+    <Compile Include="XmlSysResult.cs" />
+    <Compile Include="XmlDataResult.cs" />
     <Compile Include="XmlSet.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -67,6 +68,11 @@
     <None Include="OpenInfo.oi">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="OiGwyAction.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
