修改登录验证为Cookie验证； 优化部分代码；

--- a/ChartsWebApi/appsettings.json
+++ b/ChartsWebApi/appsettings.json
@@ -15,7 +15,8 @@
   "JwtSettings": {
     "Issuer": "http://localhost:2794/",
     "Audience": "http://localhost:2794/",
-    "SecretKey": "jwt-key-openinfo.com.cn"
+    "SecretKey": "jwt-key-openinfo.com.cn",
+    "Expires":  1
   },
   "Cors": {
     "Origins": {
