--- a/GetPDMObject/GetPDMObject.csproj
+++ b/GetPDMObject/GetPDMObject.csproj
@@ -45,7 +45,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="LoginException.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="PDMUtils.cs" />
     <Compile Include="XmlGet.cs" />
@@ -69,7 +68,19 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="MetadataExtractor.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="MetadataExtractor.xml">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
     <Content Include="OiGwyAction.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="XmpCore.dll">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
+    <Content Include="XmpCore.xml">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
