--- a/ChartsWebApi/appsettings.json
+++ b/ChartsWebApi/appsettings.json
@@ -12,15 +12,31 @@
       }
     }
   },
+  "CurrConfig": "GuoWenYan",
   "JwtSettings": {
-    "Issuer": "http://localhost:2794/",
-    "Audience": "http://localhost:2794/",
+    "Issuer": "openinfo.cn",
+    "Audience": "openinfo.cn",
     "SecretKey": "jwt-key-openinfo.com.cn",
-    "Expires":  1
+    "Expires": 1
   },
-  "Cors": {
-    "Origins": {
-      "Guowenyan": "http://localhost:8080"
+  "Localhost": {
+    "Cors": {
+      "Origins": "http://localhost:8080"
+    }
+  },
+  "OpenInfo": {
+    "Cors": {
+      "Origins": "http://openinfo.cn:5300"
+    }
+  },
+  "LongRui": {
+    "Cors": {
+      "Origins": "http://192.168.10.115:5300"
+    }
+  },
+  "GuoWenYan": {
+    "Cors": {
+      "Origins": "http://192.168.1.222:5300"
     }
   }
 }
