--- a/ChartsWebApi/appsettings.json
+++ b/ChartsWebApi/appsettings.json
@@ -12,7 +12,10 @@
       }
     }
   },
-  "CurrConfig": "Localhost",
+  "ConnectionStrings": {
+    "TJ_DATA": "Server=openinfo.cn;Database=TJ_DATA;User Id=shanggu;Password=openinfo"
+  },
+  "CurrConfig": "OpenInfo",
   "JwtSettings": {
     "Issuer": "openinfo.cn",
     "Audience": "openinfo.cn",
@@ -26,7 +29,12 @@
   },
   "OpenInfo": {
     "Cors": {
-      "Origins": "http://openinfo.cn:5300"
+      "Origins": "http://openinfo.cn:5400"
+    }
+  },
+  "TianDa": {
+    "Cors": {
+      "Origins": "http://211.149.130.155:5300"
     }
   },
   "LongRui": {
