新增天大代码

--- a/ChartsWebApi/appsettings.json
+++ b/ChartsWebApi/appsettings.json
@@ -15,7 +15,15 @@
   "ConnectionStrings": {
     "TJ_DATA": "Server=openinfo.cn;Database=TJ_DATA;User Id=shanggu;Password=openinfo"
   },
-  "CurrConfig": "OpenInfo",
+  "CurrConfig": "Localhost",
+  "XJwtSettings": {
+    "UserPad": "_ExCun",
+    "UrlSubmitScore": "/project/log/upload",
+    "Server": "http://202.205.145.156:8017",
+    "IssueId": 100400,
+    "Secret": "16jmp2",
+    "AesKey": "SbYymvfZ8UjEmShxRAB0b1Dtaa0uGjDOOJa/f0Mbuo4="
+  },
   "JwtSettings": {
     "Issuer": "openinfo.cn",
     "Audience": "openinfo.cn",
