'更新成绩提交'

--- a/ChartsWebApi/appsettings.json
+++ b/ChartsWebApi/appsettings.json
@@ -19,10 +19,11 @@
   "XJwtSettings": {
     "UserPad": "_ExCun",
     "UrlSubmitScore": "/project/log/upload",
-    "Server": "http://202.205.145.156:8017",
-    "IssueId": 100400,
-    "Secret": "16jmp2",
-    "AesKey": "SbYymvfZ8UjEmShxRAB0b1Dtaa0uGjDOOJa/f0Mbuo4="
+    "ExamName": "建筑遗产测绘基本技能虚拟仿真实验",
+    "Server": "http://www.ilab-x.com",
+    "IssueId": 102140,
+    "Secret": "x8t6pm",
+    "AesKey": "lCz5B1CfU+HQ3UhkpnI4dGJ6KnVCX1wNqNTOW/0tKic="
   },
   "JwtSettings": {
     "Issuer": "openinfo.cn",
